5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2505.log
== TEST (2019-05-14 16:36:51) 
-- CODE:
from math import *
x = eval(input("DIgite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:19) 
-- CODE:
from math import *
x = eval(input("DIgite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * -1
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 10
    sinal = sinal * -1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:32) 
-- CODE:
x = eval(input("DIgite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * -1
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 9
    sinal = sinal * -1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:40) 
-- CODE:
x = eval(input("DIgite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 9
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:08) 
-- CODE:
x = eval(input("DIgite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 9
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:57) 
-- CODE:
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 9
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:30) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
File "XXXX", line 10
    sinal = sinal * (-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:03) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp)))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(soma,10))
							 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma,10))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:41) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp)))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(result,10))
							 
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:48) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp)))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(result,10))
							 
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:52) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp)))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(result,10))
							 
-- EXECUTION TIME:
0.190449
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:34:58) 
-- CODE:
from math import *
x = eval(input("Digite o valor de x: "))
k = int(input("Digite o valor de k: "))
cont = 1
sinal = -1 
result = x
exp = 3
while(cont < k):
	result = result + ((sinal * (x ** exp) / factorial(exp)))
	sinal = sinal * (-1)
	exp = exp + 2
	cont = cont + 1
print(round(result,10))
							 
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
